--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,8 +1,18 @@
 // Place all the styles related to the Games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-.list-of-words li {
-  display: inline;
+.list-of-words {
+  padding-left: 0;
+  font-size: 24px;
   list-style: none;
-  font-size: 36px;
+  font-family: monospace;
+}
+
+li {
+  background-color: #3498db;
+  color: white;
+  border: 1px solid #2980b9;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  padding: 4px 12px;
+  display: inline;
 }
